Work around poor path tweaking by runsuite_common_pre

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -85,7 +85,9 @@ install:
   # We first print out all versions to make it easier to update this if
   # the version changes.
   - dir "c:\Program Files (x86)\WiX Toolset"*
-  - set PATH=c:\Program Files (x86)\WiX Toolset v3.11\bin;%PATH%
+  # Work around runsuite_common_pre.cmake appending x64 to bin here.
+  - ps: $wixpath=& c:\cygwin64\bin\cygpath -d 'C:\Program Files (x86)\WiX Toolset v3.11\bin'
+  - ps: $env:PATH="$wixpath;$env:PATH"
 
   ##################################################
   # XXX i#2145: point at Qt5 for testing drheapstat visualizer.
