--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2328,7 +2328,7 @@ set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${toolname_cap_spc} Memory Debugging Tool
 set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/license.txt")
 set(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README")
 
-set(CPACK_SOURCE_IGNORE_FILES "~$" "/\\.svn" "/\\.git" "\\.ninja_deps")
+set(CPACK_SOURCE_IGNORE_FILES "~$" "/.svn" "/.git" ".ninja_deps")
 
 set(CPACK_PACKAGE_VERSION "${TOOL_VERSION_NUMBER}")
 string(REGEX REPLACE
