--- a/.travis.yml
+++ b/.travis.yml
@@ -45,55 +45,71 @@ language:
 # with exludes so we can use conditional builds (plus it's clearer this way).
 jobs:
   include:
-    - os: linux
+    #######################################################################
+    # Regular test jobs
+    - if: type != cron
+      os: linux
+      compiler: gcc
+    - if: type != cron
+      os: linux
+      compiler: clang
+    - if: type != cron
+      os: osx
+      compiler: clang
+    #######################################################################
+    # Package jobs
+    - if: type = cron
+      os: linux
       compiler: gcc
       env: DEPLOY=yes
-    - os: linux
-      compiler: clang
-    - os: osx
-      # gcc on Travis claims to not be CMAKE_COMPILER_IS_GNUCC so we only run clang.
+    - if: type = cron
+      os: osx
       compiler: clang
       env: DEPLOY=yes
-      # XXX: DRi#2764: Travis OSX resources are over-subscribed and it can take
-      # hours to get an OSX machine, so we skip running PR's for now.
-      if: type != pull_request
 
 # For C/C++ there is no default install, so we set "install", not "before_install".
 install:
   - uname -a
-  # FIXME: remove the "brew update" step once Travis fixes their Mac VM's
+  # XXX: Remove the "brew update" step once Travis fixes their Mac VM's
   # on 11/15/17.  Xref https://github.com/travis-ci/travis-ci/issues/8552.
   - if [[ "`uname`" == "Darwin" ]]; then brew update; brew install nasm; fi
-  # ImageMagick is present but these are not:
-  - if [[ "`uname`" == "Linux" ]]; then sudo apt-get -y install g++-multilib ghostscript doxygen transfig; fi
+  - if [[ "`uname`" == "Linux" ]]; then sudo apt-get -y install g++-multilib doxygen; fi
 
 script:
   - tests/runsuite_wrapper.pl travis
 
-# We disable test running for these package builds in runsuite.cmake by
-# looking for $TRAVIS_EVENT_TYPE=="cron".
-# Longer-term we may want to use package.cmake instead and even make official
-# builds on Travis (DRi#2861).
+# We switch to package.cmake for these builds in runsuite_wrapper.pl by looking
+# for $TRAVIS_EVENT_TYPE=="cron".
 before_deploy:
   - git config --local user.name "Travis Auto-Tag"
   - git config --local user.email "drmemory-devs@googlegroups.com"
   # XXX: for now we duplicate this version number here with CMakeLists.txt.
   # We should find a way to share (xref DRi#1565).
-  # We support setting TAG_SUFFIX on triggered builds so we can have
-  # multiple unique tags in one day (the patchlevel here is the day number).
-  - export GIT_TAG="cronbuild-2.3.$((`git log -n 1 --format=%ct` / (60*60*24)))${TAG_SUFFIX}"
-  - git tag $GIT_TAG -a -m "Travis auto-generated tag for build $TRAVIS_BUILD_NUMBER."
+  # We support setting VERSION_NUMBER for manual builds to override all
+  # parts of the version.  If a build is included (leading dash and number
+  # at the end), it will be parsed and passed to package.cmake.  We only
+  # use a non-zero build number when making multiple manual builds in one day.
+  - >
+      if test -z "${VERSION_NUMBER}"; then
+          export GIT_TAG="cronbuild-2.3.$((`git log -n 1 --format=%ct` / (60*60*24)))"
+      else
+          export GIT_TAG="release_${VERSION_NUMBER}"
+      fi
+  # We handle races among our 4 package jobs by ignoring failure here.
+  # XXX: That could mask a real failure: we could try to distinguish the
+  # type of error.
+  - (git tag $GIT_TAG -a -m "Travis auto-generated tag for build $TRAVIS_BUILD_NUMBER." || true)
 deploy:
   provider: releases
   api_key:
     secure: HDMWsqw+DqxPg1lhy9pk23EyHI5PdTBo3/SA//h41tIKi2+uEtvoETidRXa/ePkEymVRGyzF7F5RVNFeKu4gM3taxa7JUbOc1OgC8o7oRVfYXZd1qALdDf03EyYAtw3iTeLKlOBSR1cnRZcoOZ6Ja9E6OZC9qjAPrXywNzZkkv4=
   file_glob: true
-  file: "build*/DrMemory*.tar.gz"
+  file: "DrMemory*.tar.gz"
   skip_cleanup: true
   # The name must just be the tag in order to match Appveyor.
   name: $GIT_TAG
   # This body is clobbered by Appveyor.
-  body: "Auto-generated periodic build (Travis build $TRAVIS_BUILD_NUMBER)."
+  body: "Auto-generated periodic build."
   on:
     repo: DynamoRIO/drmemory
     branch: master
