--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -142,8 +142,8 @@ IGNORE_PREFIX          =
 GENERATE_HTML          = YES
 HTML_OUTPUT            = html
 HTML_FILE_EXTENSION    = .html
-HTML_HEADER            =
-HTML_FOOTER            =
+HTML_HEADER            = header.html
+HTML_FOOTER            = footer.html
 HTML_STYLESHEET        =
 GENERATE_HTMLHELP      = NO
 CHM_FILE               =
