TEMPORARY tweak RDP config

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -56,7 +56,7 @@ configuration:
 
 #TEMPORARY
 environment:
-  APPVEYOR_RDP_PASSWORD: DiagnoseDrMExits
+  APPVEYOR_RDP_PASSWORD: Diagnose:4DrMExits
 
 init:
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
