i#2266: Dump memory layout to json file on annotation (#2267)
Adds a new annotation DRMEMORY_ANNOTATE_DUMP_MEMORY_LAYOUT() which
triggers dumping the memory layout to a new file "memlayout.nnnn.log"
in the log subdirectory, where "nnnn" is incremented on each
successive dump.  The file is in JSON format.

Exports annotation support by building the required .c file with
custom flags as a library, and exports it and the two required header
files drmemory_annotations.h and dr_annotations_asm.h.

A basic block whose tag matches the address of the symbol "main" in
the executable is watched for.  Heap allocations prior to that point
are marked with a new flag MALLOC_BEFORE_MAIN.  The stack pointer at
that point is recorded.

At dump time, a heap iteration is done, skipping MALLOC_BEFORE_MAIN
objects.  Each object is placed into a tree.  Each thread stack is
also placed into a trace; fof the primary thread, only the stack
region between the recorded main stack point and the TOS is
considered.  Both trees are then walked, with each memory region
walked in pointer-sized chunks, printing out values and whether values
look like pointers to the top or middle of other objects in either
tree.

This feature and its annotation are disabled if asm-goto is not supported
by the compiler (clang<9.0), determined by try-compile.

Adds a test "memlayout".  Parameterizes runtest.cmake to allow
checking memlayout*.json instead of results.txt.  CMake is having
trouble with square brackets (it always did, but there are many of
them in json files), so runtest.cmake now replaces them with angle as
a workaround.

If jsonlint-php is found, runs it on each generated json file in the
test to ensure there are no syntax errors.  We install jsonlint on Travis.

Documentation will be added later once post-processing is ironed out.

Issue: #2266

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2010-2019 Google, Inc.  All rights reserved.
+# Copyright (c) 2010-2020 Google, Inc.  All rights reserved.
 # Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -122,7 +122,7 @@ function(set_props target)
 endfunction(set_props)
 
 function(tobuild name source)
-  set(srcs ${source})
+  set(srcs ${source} ${ARGN})
 
   # support same-file asm code
   if (NOT DEFINED ${name}_disable_asm)
@@ -328,9 +328,11 @@ function(newtest_nobuild_allparams test exe test_ops drmem_ops dr_ops postproces
     if (postprocess)
       # test -skip_results + -results (PR 575481)
       set(postcmd "${cmd_base};-results")
-    else (postprocess)
+    elseif (DEFINED ${test}.postcmd)
+      set(postcmd ${${test}.postcmd})
+    else ()
       set(postcmd "")
-    endif (postprocess)
+    endif ()
   endif (TOOL_DR_HEAPSTAT)
   string(REGEX REPLACE " " "@@" postcmd "${postcmd}")
   string(REGEX REPLACE ";" "@" postcmd "${postcmd}")
@@ -343,12 +345,20 @@ function(newtest_nobuild_allparams test exe test_ops drmem_ops dr_ops postproces
   else (X64)
     set(TOOL_BIN "bin32")
   endif (X64)
+  if (postprocess)
+    set(resmark "To obtain results, run with: -results")
+  elseif (DEFINED ${test}.resmark)
+    set(resmark ${${test}.resmark})
+  else ()
+    set(resmark "Details:")
+  endif ()
   convert_local_path_to_device_path(dr_device_path ${DynamoRIO_DIR})
   add_test(${test} ${CMAKE_COMMAND}
     -D cmd:STRING=${cmd}
     -D TOOL_DR_HEAPSTAT:BOOL=${TOOL_DR_HEAPSTAT}
     -D outpat:STRING=${src_param_pattern}/${resbase}.out
     -D respat:STRING=${src_param_pattern}/${resbase}.res
+    -D resmark:STRING=${resmark}
     -D nudge:STRING=${nudge}
     -D VMKERNEL:BOOL=${VMKERNEL}
     -D USE_DRSYMS:BOOL=${USE_DRSYMS}
@@ -910,6 +920,23 @@ if (TOOL_DR_MEMORY)
   if (NOT ARM) # XXX i#1726: port to ARM
     newtest_nobuild_ex(state.pattern state "" "-unaddr_only" "" OFF "" "ANY" "")
   endif ()
+
+  # XXX DRi#1672: add ARM annotation support to DR
+  if (DR_ANNOTATIONS_SUPPORTED AND NOT ARM)
+    set(memlayout.resmark "Memory layout written to:")
+    find_program(JSONLINT jsonlint-php DOC "JSON linter from jsonlint package")
+    if (JSONLINT)
+      set(memlayout.postcmd "${JSONLINT}")
+      message(STATUS "Found ${JSONLINT}: will use to validate json output")
+    endif ()
+    tobuild(memlayout memlayout.cpp)
+    target_link_libraries(memlayout drmemory_annotations)
+    newtest_nobuild_ex(memlayout memlayout "" "" "" OFF "" 0 "")
+    # We want a simple stack layout.
+    append_test_compile_flags(memlayout "-O0")
+    target_include_directories(memlayout PRIVATE ${framework_incdir})
+  endif ()
+
 else (TOOL_DR_MEMORY)
   newtest_ex(stale stale.c "" "-staleness;-stale_granularity;100" "" OFF "" 0)
 
