--- a/.github/workflows/ci-x86.yml
+++ b/.github/workflows/ci-x86.yml
@@ -33,7 +33,7 @@ defaults:
 
 jobs:
   # 64-bit and 32-bit Linux build with gcc and tests:
-  x86-32:
+  x86:
     runs-on: ubuntu-16.04
 
     steps:
@@ -52,4 +52,4 @@ jobs:
 
     - name: Run Suite
       working-directory: ${{ github.workspace }}
-      run: ./suite/runsuite_wrapper.pl travis
+      run: ./tests/runsuite_wrapper.pl travis
