Modify runsuite_wrapper to work with MSWin32 perl, where fork is not available.  We tee to a file instead of forking.

--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -65,4 +65,4 @@ jobs:
         echo ------ Running suite ------
         echo PATH is "%PATH%"
         echo Running in directory "%CD%"
-        c:\msys64\usr\bin\perl tests/runsuite_wrapper.pl travis use_ninja
+        perl tests/runsuite_wrapper.pl travis use_ninja
