NOCHECK diagnostics for shadow; run only 2 tests; log to stderr; set verbose to 2

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1157,3 +1157,4 @@ if (APPLE)
     memalign.nodelay memalign.pattern
     PROPERTIES LABELS OSX)
 endif ()
+set_tests_properties(hello free PROPERTIES LABELS SANITY) #NOCHECK
