i#2323 GA CI: Deploy docs when posting a new release (#2350)
Adds a step to the Linux package job to deploy the html documentation
to our Github Pages docs site.  Relies on a personal access token stored
as a secret in the drmemory repository for access to drmemory_docs.

Fixes: #2323

--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -88,12 +88,23 @@ jobs:
       env:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
+        DEPLOY_DOCS: yes
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
         name: linux-tarball
         path: DrMemory-Linux-${{ steps.version.outputs.version_number }}.tar.gz
+
+    - name: Deploy Docs
+      uses: crazy-max/ghaction-github-pages@v2
+      with:
+        build_dir: html
+        repo: DynamoRIO/drmemory_docs
+        target_branch: master
+      env:
+        # We need a personal access token for write access to another repo.
+        GH_PAT: ${{ secrets.DOCS_TOKEN }}
 
   ###########################################################################
   # Mac tarball with x86-64 build:
